Given T5912, we should also drop WindowsCE support for libassuan.
Description
Description
Revisions and Commits
Revisions and Commits
| rA Assuan | |||
| rAdf6aec566ce4 build: Remove WindowsCE support from mkheader. | |||
| rAe3b1e3857e00 Drop WindowsCE support. | |||
Related Objects
Related Objects
- Mentioned In
- T7163: Release libassuan 3.0.0 and 3.0.1
- Mentioned Here
- T5912: libgpg-error: Drop WindowsCE support