Drop WindowsCE support.

* contrib/*: Remove.
* Makefile.am (EXTRA_DIST): Don't include contrib/.
* configure.ac (HAVE_W32CE_SYSTEM): Remove.
* src/gpgcedev.c: Remove.
* src/gpgcedev.def: Remove.
* src/gpgcemgr.c: Remove.
* src/system-w32ce.c: Remove.
* src/w32ce-add.h: Remove.
* src/w32ce-fd-t.inc.h: Remove.
* src/Makefile.am (EXTRA_DIST, parts_of_assuan_h, common_sources): Fix.
* src/assuan-buffer.c [HAVE_W32CE_SYSTEM]: No conditionalize.
* src/setenv.c [HAVE_W32CE_SYSTEM]: Likewise.
* src/assuan-defs.h [HAVE_W32CE_SYSTEM]: Remove dependent part.
* src/assuan-error.c [HAVE_W32CE_SYSTEM]: Likewise.
* src/assuan-handler.c [HAVE_W32CE_SYSTEM]: Likewise.
* src/assuan-socket.c [HAVE_W32CE_SYSTEM]: Likewise.
* src/system.c [HAVE_W32CE_SYSTEM]: Likewise.
* src/sysutils.c [HAVE_W32CE_SYSTEM]: Likewise.
* tests/Makefile.am (EXTRA_DIST): Fix.
(w32cetools): Remove.
* tests/common.h [HAVE_W32CE_SYSTEM]: Remove dependent part.
* tests/pipeconnect.c [HAVE_W32CE_SYSTEM]: Likewise.
* tests/ce-createpipe.c: Remove.
* tests/ce-server.c: Remove.

--

GnuPG-bug-id: 6170
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>