src/assuan-buffer.c
@@ -29,9 +29,7 @@
 #endif
 #include <assert.h>
 #ifdef HAVE_W32_SYSTEM
-#ifndef HAVE_W32CE_SYSTEM
 # include <process.h>
-#endif
 #endif
 #include "assuan-defs.h"
 
