src/assuan-defs.h
@@ -375,15 +375,6 @@ FILE *_assuan_funopen(void *cookie,
 /*-- sysutils.c --*/
 const char *_assuan_sysutils_blurb (void);
 
-#ifdef HAVE_W32CE_SYSTEM
-
-#define getpid() GetCurrentProcessId ()
-char *_assuan_getenv (const char *name);
-#define getenv(a) _assuan_getenv ((a))
-
-#endif /*HAVE_W32CE_SYSTEM*/
-
-
 /* Prototypes for replacement functions.  */
 #ifndef HAVE_MEMRCHR
 void *memrchr (const void *block, int c, size_t size);
