src/system.c
@@ -203,9 +203,6 @@ _assuan_close_inheritable (assuan_context_t ctx, assuan_fd_t fd)
   TRACE1 (ctx, ASSUAN_LOG_SYSIO, "_assuan_close_inheritable", ctx,
 	  "fd=0x%x", fd);
 
-#ifdef HAVE_W32CE_SYSTEM
-  return 0; /* Nothing to do because it is a rendezvous id.  */
-#else
   if (ctx->system.version)
     return (ctx->system.close) (ctx, fd);
   else
@@ -216,7 +213,6 @@ _assuan_close_inheritable (assuan_context_t ctx, assuan_fd_t fd)
       _assuan_post_syscall ();
       return res;
     }
-#endif
 }
 
 
