tests/pipeconnect.c
@@ -247,61 +247,11 @@ run_client (const char *servername)
 static void
 parse_std_file_handles (int *argcp, char ***argvp)
 {
-#ifdef HAVE_W32CE_SYSTEM
-  int argc = *argcp;
-  char **argv = *argvp;
-  const char *s;
-  assuan_fd_t fd;
-  int i;
-  int fixup = 0;
-
-  if (!argc)
-    return;
-
-  for (argc--, argv++; argc; argc--, argv++)
-    {
-      s = *argv;
-      if (*s == '-' && s[1] == '&' && s[2] == 'S'
-          && (s[3] == '0' || s[3] == '1' || s[3] == '2')
-          && s[4] == '=' 
-          && (strchr ("-01234567890", s[5]) || !strcmp (s+5, "null")))
-        {
-          if (s[5] == 'n')
-            fd = ASSUAN_INVALID_FD;
-          else
-            fd = _assuan_w32ce_finish_pipe (atoi (s+5), s[3] != '0');
-          switch (s[3] - '0')
-            {
-            case 0: my_stdin = fd; break;
-            case 1: my_stdout = fd; break;
-            case 2: my_stderr = fd; break;
-            }
-
-          fixup++;
-        }
-      else
-        break;
-    }
-
-  if (fixup)
-    {
-      argc = *argcp;
-      argc -= fixup;
-      *argcp = argc;
-
-      argv = *argvp;
-      for (i=1; i < argc; i++)
-        argv[i] = argv[i + fixup];
-      for (; i < argc + fixup; i++)
-        argv[i] = NULL;
-    }
-#else
   (void)argcp;
   (void)argvp;
   my_stdin = 0;
   my_stdout = 1;
   my_stderr = 2;
-#endif
 }
 
 
